Выполнили блок заданий по ORM

--- a/template/item.html
+++ b/template/item.html
@@ -6,7 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    Товар : {{item.name}}<br>
-    <a href="/">Домой</a>
+    <a href="/item/{{item.id}}"><li>{{item.name}} {{item.brand}} {{item.count}}</a></li>
 </body>
 </html>
